# MetricsStream

./: .gitignore  AGENTS.md  BRANCH_STRATEGY.md  CLAUDE.md  CMakeLists.txt  COMMIT_JOURNEY.md  EXERCISES.md  LEARNING_PATH.md  README.md  TODOS.md  craft1.html  deadlock_test.cpp  learning-hub-v2.html  learning-hub.html  load_test.cpp  load_test_persistent.cpp  metricstream_conversations.db  monitor_load_test.sh  performance_results.txt  performance_test.sh  profile_output.txt  sample_profile.txt  systems-craft-main.html  test-branch-protection-2.txt  test-branch-protection-3.txt  test-branch-protection.txt  test-bypass-merge.txt  test-direct-push.txt  test-strict-protection.txt  test_client.cpp  test_decision_tree.html
.github/workflows/: ci.yml  deploy-pages.yml
conversation/web/: decision_tree.html  decision_tree.json
craft2/: README.md
craft3/: README.md
craft4/: README.md
craft5/: README.md
docs/: ARCHITECTURE.md  CAPACITY_PLANNING.md  DESIGN_DECISIONS.md  PRINCIPAL_ENGINEER_LEARNING_PATH.md  README.md  SERVICE_DECOMPOSITION.md  architecture_comparison.md  index.html  phase7_keep_alive_results.md  ring_buffer_implementation.md
docs/learning-resources/concepts/: connection_explained.txt  drain_visualization.txt
docs/learning-resources/visualizations/: event_driven_architecture.html  request_flow_visual.html
include/: http_server.h  ingestion_service.h  metric.h  thread_pool.h
learning-resources/: README.md
learning-resources/concepts/: queue_drain_explained.txt
phase0/: CMakeLists.txt  EXERCISES.md  QUICKSTART.md  README.md  SUMMARY.md  TUTORIAL.md  VIDEO_SCRIPT.md  benchmark.sh  build.sh  demo.sh  phase0_poc.cpp  simple_benchmark.cpp
src/: CMakeLists.txt  common.cpp  http_server.cpp  ingestion_service.cpp  main.cpp  thread_pool.cpp
tests/: CMakeLists.txt  placeholder_test.cpp
tools/: add_phase6_phase7.py  backfill_decisions.py  conversation_db.py  decision_tree_generator.py  quick_capture.py
website/: craft1.html  index.html
